fixed alignment issue

--- a/src/components/GalleryCard/gallery.css
+++ b/src/components/GalleryCard/gallery.css
@@ -18,8 +18,9 @@
   background-color: darkgray;
 }
 .sameLine {
-    border: 1px solid red;
-    
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .linkButton {
   height: 40px;
@@ -27,7 +28,6 @@
   border-radius: 40px;
   background-color:darkblue;
   color: whitesmoke;
-  display: inline-block;
 }
 
 .linkButton:hover {
@@ -35,9 +35,9 @@
 }
 
  .discord {
+   margin-top: 2px;
   height: 50px;
   width: 50px;
-  display: inline-block;
 }
 .tourneyimg {
   background-size: cover;
